--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -43,6 +43,7 @@
 
 #menuImg {
   object-fit: contain;
+  vertical-align:middle;
 }
 
 @media (max-width: 375px) {
@@ -64,7 +65,8 @@
   }
   #menuImgCover {
     width: 20vw;
-    height: 20vw;
+    height: calc(30vw - 10px);
+    line-height: calc(30vw - 10px);
   }
   #menuImg {
     width: 20vw;
@@ -78,11 +80,12 @@
   }
   #menuItem {
     width: 30vw;
-    height: 33vw;
+    height: 34vw;
   }
   #menuImgCover {
     width: 30vw;
-    height: 30vw;
+    height: calc(30vw - 60px);
+    line-height: calc(30vw - 60px);
   }
   #menuImg {
     width: 20vw;
