--- a/src/styles/viewer.css
+++ b/src/styles/viewer.css
@@ -1,3 +1,13 @@
+#viewerDimmed {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0,0,0,0.5);
+}
+
 #viewer {
   position: fixed;
   left: 5vw;
@@ -8,7 +18,6 @@
   border-radius: 10px;
   background-color: white;
   text-align: center;
-  box-shadow: 5px 5px 5px #eeeeee;
   -webkit-animation: fade-in 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
           animation: fade-in 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
