--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,20 +1,32 @@
-body {
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css');
+
+html, body {
   padding: 0;
   margin: 0;
-  font-family: 'Pretendard-Regular';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: 'Pretendard Variable', Pretendard, -apple-system,
+  BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
+  'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 699px) {
   .App {
     padding: 80px 30px;
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
   .App {
     padding: 120px 30px 0 30px;
   }
 }
+
+/* @media (orientation: landscape) {
+  html {
+    width: 0;
+    height: 0;
+    transform: rotate(90deg);
+  }
+} */
