--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,18 +1,17 @@
 #header {
-  width: 100vw;
+  width: 100%;
   background-color: black;
-  padding: 30px;
+  padding: 30px 0;
   position: fixed;
   z-index: 99;
 }  
 
 #text {
-  font-family: 'Pretendard-Regular';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   color: white;
   margin: 0;
+  text-align: center;
 }
 
 @media (min-width: 600px) {
