--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -38,18 +38,19 @@
 
 #menuSet {
   display: flex;
-  gap: 2px;
+  gap: 10px;
   flex-wrap: wrap;
 }
 
 #menuItem {
   flex: 1;
   margin: 0;
-  border: 1px solid #999999;
+  /* border: 1px solid #999999; */
   border-radius: 10px;
   margin: 0 0 3px 0;
   display: flex;
   flex-direction: column;
+  background-color: #f6f6f6;
 }
 
 #menuImgCover {
@@ -103,7 +104,7 @@
   }
 }
 
-@media ((min-width: 413px) and (max-width: 599px)) {
+@media ((min-width: 412px) and (max-width: 600px)) {
   #menuTitle {
     font-size: 20px;
   }
