영어 번역 기능 추가

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -14,6 +14,22 @@
   font-weight: 600;
 }
 
+#transButtonSet {
+  text-align: right;
+  margin: 15px 0 0 0;
+}
+
+#transTitle {
+  padding: 0 10px 0 0;
+}
+
+#transButton {
+  background-color: white;
+  border: 1px solid #aaaaaa;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
 @media (min-width: 600px) {
   #button {
     font-size: 24px;
