--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -48,6 +48,7 @@
   /* border: 1px solid #999999; */
   border-radius: 10px;
   margin: 0 0 3px 0;
+  padding: 0 5px;
   display: flex;
   flex-direction: column;
   background-color: #f6f6f6;
